--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Maxwell
-middle_name: R.
+middle_name: 
 last_name: Jones
 email: mjones2 [at] andrew [dot] cmu [dot] edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
