--- a/_config.yml
+++ b/_config.yml
@@ -407,7 +407,7 @@ imagemagick:
     - ".jpeg"
     - ".png"
     - ".tiff"
-    - ".gif"
+    # - ".gif"
   output_formats:
     webp: "-quality 85"
 
