started work on blog

--- a/_config.yml
+++ b/_config.yml
@@ -132,8 +132,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Maxwell's Technical Blog # blog_name will be displayed in your blog page
+blog_description: Paper summaries, mathematically rigorous explanations, and more! # blog_description will be displayed in your blog page
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
