--- a/_config.yml
+++ b/_config.yml
@@ -201,7 +201,7 @@ collections:
 announcements:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-  limit: # leave blank to include all the news in the `_news` folder
+  limit: 5 # leave blank to include all the news in the `_news` folder
 
 latest_posts:
   enabled: true
@@ -637,11 +637,7 @@ jsonresume:
   - work
   - education
   - publications
-  - projects
-  - volunteer
+  - teaching
+  # - projects
   - awards
-  - certificates
-  - skills
-  - languages
-  - interests
-  - references
+  # - skills
