small tweaks - first version of website should be complete!

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -10,6 +10,10 @@
   - firstname: ["Laura"]
     url: https://scholar.google.com/citations?user=c8IpF9gAAAAJ&hl=en
 
+"sharma":
+  - firstname: ["Dravyansh"]
+    url: https://www.cs.cmu.edu/~dravyans/
+
 "adcock":
   - firstname: ["Aaron"]
     url: https://scholar.google.com/citations?user=oa78zHUAAAAJ&hl=en
